<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewRouteActivity" >
    
    <ScrollView 
        android:id="@+id/scrvPlanningDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:paddingBottom="15dp"
		android:paddingLeft="16dp"
		android:paddingRight="16dp"
        android:background="@android:drawable/picture_frame">
        
        <LinearLayout 
            android:id="@+id/linLayPlanningDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/ilMapperName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etxtMapperName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="text"
					android:hint="@string/etxtMapperName"
					android:imeOptions="actionNext"
					android:textColorHint="@color/accent"/>
			</android.support.design.widget.TextInputLayout>

			<requestFocus/>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/ilRouteName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etxtRouteName"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 _"
					android:inputType="textCapCharacters"
					android:hint="@string/etxtRouteName"
					android:imeOptions="actionNext"
					android:textColorHint="@color/accent"/>
			</android.support.design.widget.TextInputLayout>

            
            <LinearLayout 
                android:id="@+id/linLayTransportMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
		        <android.support.v7.widget.AppCompatSpinner
		            android:id="@+id/spnrTransportMode"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="8"
					android:spinnerMode="dialog"
		            android:entries="@array/transport_mode_array"/>
		        
		        <EditText
		            android:id="@+id/txtvTransporModeError"
		            android:layout_width="0dp"
		            android:layout_height="match_parent"
		            android:layout_weight="1"
		            android:background="@null"
		            android:editable="false"
		            android:visibility="gone"/>
		        
		    </LinearLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/ilTransportCompany"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etxtTransportCompany"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/etxtTransportCompanyHint"
					android:maxLines="1"
					android:singleLine="true"
					android:imeOptions="actionNext"
					android:textColorHint="@color/accent"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/ilStartPoint"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etxtStartPoint"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
					android:inputType="textCapCharacters"
					android:imeOptions="actionNext"
					android:hint="@string/etxtStartPointHint"
					android:textColorHint="@color/accent"/>
			</android.support.design.widget.TextInputLayout>

			<android.support.design.widget.TextInputLayout
				android:id="@+id/ilEndPoint"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<EditText
					android:id="@+id/etxtEndPoint"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
					android:inputType="textCapCharacters"
					android:hint="@string/etxtEndPointHint"
					android:imeOptions="actionDone"
					android:textColorHint="@color/accent"/>
			</android.support.design.widget.TextInputLayout>
	        
	        <LinearLayout
	            android:id="@+id/linLayNewRouteActionbuttons"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
	            
	            <TextView
	                android:id="@+id/tbtnCancel"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:padding="10dp"
	                android:layout_weight="1"
	                android:gravity="center"
	                android:text="Cancel"
	                android:clickable="true"
	                android:onClick="onClickCancel"/>
	            
	            <TextView
	                android:id="@+id/tbtnSave"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:padding="10dp"
	                android:layout_weight="1"
	                android:gravity="center"
	                android:text="Save"
	                android:textColor="@color/accent"
	                android:clickable="true"
	                android:onClick="onClickSave"/>
	            
	            <TextView
	                android:id="@+id/tbtnCaptureRoute"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:padding="10dp"
	                android:layout_weight="1"
	                android:gravity="center"
	                android:text="Capture"
	                android:textColor="@color/accent"
	                android:clickable="true"
	                android:onClick="onClickCaptureRoute"/>
	                
	        </LinearLayout> 
	        
	        
<!-- 	        <LinearLayout  -->
<!-- 	            android:id="@+id/linLayPlanningActionbuttons" -->
<!-- 	            android:layout_width="match_parent" -->
<!-- 	            android:layout_height="wrap_content" -->
<!-- 	            android:orientation="horizontal"> -->
	            
<!-- 	            <ImageButton  -->
<!-- 	                android:id="@+id/ibtnSave" -->
<!-- 	                android:layout_width="0dp" -->
<!-- 	                android:layout_height="wrap_content" -->
<!-- 	                android:layout_weight="1" -->
<!-- 	                android:background="@null" -->
<!-- 	                android:src="@drawable/planning_button" -->
<!-- 	                android:onClick="onClickSave"/> -->
	            
<!-- 	            <ImageButton  -->
<!-- 	                android:id="@+id/ibtnCancel" -->
<!-- 	                android:layout_width="0dp" -->
<!-- 	                android:layout_height="wrap_content" -->
<!-- 	                android:layout_weight="1" -->
<!-- 	                android:background="@null" -->
<!-- 	                android:src="@drawable/planning_button" -->
<!-- 	                android:onClick="onClickCancel"/> -->
	            
<!-- 	            <ImageButton  -->
<!-- 	                android:id="@+id/ibtnToCapture" -->
<!-- 	                android:layout_width="0dp" -->
<!-- 	                android:layout_height="wrap_content" -->
<!-- 	                android:layout_weight="1" -->
<!-- 	                android:background="@null" -->
<!-- 	                android:src="@drawable/planning_button" -->
<!-- 	                android:onClick="onClickToCapture"/> -->
	                
<!-- 	        </LinearLayout>  -->
	        
	        
	    </LinearLayout>
        
    </ScrollView>

</RelativeLayout>
